feat: update auth endpoints to return 302 redirects
